[gd_scene load_steps=15 format=3 uid="uid://byrfv7x07xtlh"]

[ext_resource type="Script" path="res://scripts/ceres_rotating_orb.gd" id="1_61a48"]
[ext_resource type="Texture2D" uid="uid://btced1y2j317q" path="res://assets/sprites/fx/spr_ceres_orb.png" id="2_fltia"]
[ext_resource type="AudioStream" uid="uid://dqxu5pv7k6tdc" path="res://assets/sfx/snd_magic_slash.wav" id="3_blikk"]
[ext_resource type="Texture2D" uid="uid://cv02b1a8sn5in" path="res://assets/sprites/fx/spr_cross_aim.png" id="4_uqjky"]

[sub_resource type="Animation" id="Animation_bck2b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hitbox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ao6w2"]
resource_name = "fade_out"
length = 0.2
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3dco6"]
resource_name = "default"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TargetIcon:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xsgut"]
_data = {
"RESET": SubResource("Animation_bck2b"),
"fade_out": SubResource("Animation_ao6w2"),
"shoot": SubResource("Animation_3dco6")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_18vhq"]
radius = 7.0

[sub_resource type="AtlasTexture" id="AtlasTexture_2tjex"]
atlas = ExtResource("4_uqjky")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0hhf"]
atlas = ExtResource("4_uqjky")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxfqf"]
atlas = ExtResource("4_uqjky")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ilav"]
atlas = ExtResource("4_uqjky")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_yyeac"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tjex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0hhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxfqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ilav")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="CeresRotatingOrb" type="Area2D"]
top_level = true
z_index = 1
collision_layer = 0
collision_mask = 2
script = ExtResource("1_61a48")

[node name="Sprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_fltia")
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xsgut")
}
autoplay = "RESET"

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(7, 0)
shape = SubResource("CircleShape2D_18vhq")
disabled = true

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="SlashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_blikk")
bus = &"SFX"

[node name="InitialWaitTimer" type="Timer" parent="."]
one_shot = true

[node name="TargetIcon" type="AnimatedSprite2D" parent="."]
visible = false
top_level = true
z_index = 2
sprite_frames = SubResource("SpriteFrames_yyeac")
autoplay = "default"
frame = 3
frame_progress = 0.158112

[node name="RotationWaitTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timeout"]
[connection signal="timeout" from="InitialWaitTimer" to="." method="_on_initial_wait_timer_timeout"]
[connection signal="timeout" from="RotationWaitTimer" to="." method="_on_rotation_wait_timer_timeout"]
